WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
119590
<unknown> is often dumped instead of path in test output
https://bugs.webkit.org/show_bug.cgi?id=119590
Summary
<unknown> is often dumped instead of path in test output
Alexey Proskuryakov
Reported
2013-08-08 12:31:53 PDT
E.g. resources/first-page.html - willSendRequest <NSURLRequest URL resources/first-page.html, main document URL resources/first-page.html, http method GET> redirectResponse (null) <unknown> - didFinishLoading
Attachments
proposed fix
(54.77 KB, patch)
2013-08-08 17:45 PDT
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2013-08-08 17:45:15 PDT
Created
attachment 208385
[details]
proposed fix
WebKit Commit Bot
Comment 2
2013-08-09 11:39:40 PDT
Comment on
attachment 208385
[details]
proposed fix Clearing flags on attachment: 208385 Committed
r153903
: <
http://trac.webkit.org/changeset/153903
>
WebKit Commit Bot
Comment 3
2013-08-09 11:39:42 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug