<unknown> is often dumped instead of path in test output https://bugs.webkit.org/show_bug.cgi?id=119590

Reviewed by Anders Carlsson.

Tools:

There were two reasons for <unknown>:
1. When delegate logging is enabled via a testRunner call, that obviously happens
after main resource load starts, so we don't record its URL.
2. Authentication delegate logging relied on URL recording, but it's only turned on
when enabling resource loading delegate logging, not auth one.

URL recording was made conditional in <http://trac.webkit.org/r19316>, which was
landed without posted rationale and unreviewed. Just undoing that change now.

* DumpRenderTree/mac/ResourceLoadDelegate.mm:
(-[ResourceLoadDelegate webView:identifierForInitialRequest:fromDataSource:]):
* WebKitTestRunner/InjectedBundle/InjectedBundlePage.cpp:
(WTR::InjectedBundlePage::didInitiateLoadForResource):

LayoutTests:

Updating test results.

* fast/loader/file-protocol-fragment-expected.txt:
* fast/loader/main-document-url-for-non-http-loads-expected.txt:
* http/tests/cache/iframe-304-crash-expected.txt:
* http/tests/cache/willsendrequest-returns-null-for-memory-cache-load-expected.txt:
* http/tests/loading/307-after-303-after-post-expected.txt:
* http/tests/loading/authentication-after-redirect-stores-wrong-credentials/authentication-after-redirect-stores-wrong-credentials-expected.txt:
* http/tests/loading/basic-auth-resend-wrong-credentials-expected.txt:
* http/tests/loading/basic-credentials-sent-automatically-expected.txt:
* http/tests/loading/redirect-methods-expected.txt:
* http/tests/misc/401-alternative-content-expected.txt:
* http/tests/misc/authentication-redirect-1/authentication-sent-to-redirect-cross-origin-expected.txt:
* http/tests/misc/authentication-redirect-2/authentication-sent-to-redirect-same-origin-expected.txt:
* http/tests/misc/authentication-redirect-4/authentication-sent-to-redirect-same-origin-url-expected.txt:
* http/tests/misc/favicon-loads-with-images-disabled-expected.txt:
* http/tests/misc/link-rel-icon-beforeload-expected.txt:
* http/tests/misc/will-send-request-returns-null-on-redirect-expected.txt:
* http/tests/misc/window-dot-stop-expected.txt:
* http/tests/security/401-logout/401-logout-expected.txt:
* http/tests/security/XFrameOptions/x-frame-options-allowall-expected.txt:
* http/tests/security/XFrameOptions/x-frame-options-deny-expected.txt:
* http/tests/security/XFrameOptions/x-frame-options-deny-meta-tag-expected.txt:
* http/tests/security/XFrameOptions/x-frame-options-deny-meta-tag-in-body-expected.txt:
* http/tests/security/XFrameOptions/x-frame-options-deny-meta-tag-parent-same-origin-allow-expected.txt:
* http/tests/security/XFrameOptions/x-frame-options-deny-meta-tag-parent-same-origin-deny-expected.txt:
* http/tests/security/XFrameOptions/x-frame-options-invalid-expected.txt:
* http/tests/security/XFrameOptions/x-frame-options-multiple-headers-conflict-expected.txt:
* http/tests/security/XFrameOptions/x-frame-options-multiple-headers-sameorigin-allow-expected.txt:
* http/tests/security/XFrameOptions/x-frame-options-multiple-headers-sameorigin-deny-expected.txt:
* http/tests/security/XFrameOptions/x-frame-options-parent-same-origin-allow-expected.txt:
* http/tests/security/XFrameOptions/x-frame-options-parent-same-origin-deny-expected.txt:
* http/tests/xmlhttprequest/failed-auth-expected.txt:
* http/tests/xmlhttprequest/remember-bad-password-expected.txt:
* loader/go-back-cached-main-resource-expected.txt:
* platform/efl-wk2/loader/go-back-cached-main-resource-expected.txt:
* platform/mac/fast/images/support-broken-image-delegate-expected.txt:
* platform/mac/security/block-test-expected.txt:
* platform/mac/security/block-test-no-port-expected.txt:
* platform/mac/webarchive/loading/cache-expired-subresource-expected.txt:
* webarchive/loading/test-loading-archive-expected.txt:
* webarchive/loading/test-loading-archive-subresource-null-mimetype-expected.txt:


Canonical link: https://commits.webkit.org/137597@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@153903 268f45cc-cd09-0410-ab3c-d52691b4dbfc