Tools/WebKitTestRunner/InjectedBundle/InjectedBundlePage.cpp
@@ -1050,9 +1050,6 @@ void InjectedBundlePage::didInitiateLoadForResource(WKBundlePageRef page, WKBund
     if (!InjectedBundle::shared().isTestRunning())
         return;
 
-    if (!InjectedBundle::shared().testRunner()->shouldDumpResourceLoadCallbacks())
-        return;
-
     WKRetainPtr<WKURLRef> url = adoptWK(WKURLRequestCopyURL(request));
     assignedUrlsCache.add(identifier, pathSuitableForTestResult(url.get()));
 }
